--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -12,39 +12,46 @@
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyAddress">Property Address</label>
-                        <input type="text" class="form-control" id="propertyAddress" value={{propertyAddress}} (keyup)="setPropertyAddress($event)">
+                        <input type="text" class="form-control" id="propertyAddress" value={{propertyAddress}}
+                            (keyup)="setPropertyAddress($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyCity">City</label>
-                        <input type="text" class="form-control" id="propertyCity" value={{propertyCity}} (keyup)="setPropertyCity($event)">
+                        <input type="text" class="form-control" id="propertyCity" value={{propertyCity}}
+                            (keyup)="setPropertyCity($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyState">State</label>
-                        <input type="text" class="form-control" id="propertyState" value={{propertyState}} (keyup)="setPropertyState($event)">
+                        <input type="text" class="form-control" id="propertyState" value={{propertyState}}
+                            (keyup)="setPropertyState($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyZip">Zip</label>
-                        <input type="text" class="form-control" id="propertyZip" value={{propertyZip}} (keyup)="setPropertyZip($event)">
+                        <input type="text" class="form-control" id="propertyZip" value={{propertyZip}}
+                            (keyup)="setPropertyZip($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="annualPropertyTaxes">Annual Property Taxes</label>
-                        <input type="number" class="form-control" id="annualPropertyTaxes" value={{annualPropertyTaxes}} (keyup)="setAnnualPropertyTaxes($event)">
+                        <input type="number" class="form-control" id="annualPropertyTaxes" value={{annualPropertyTaxes}}
+                            (keyup)="setAnnualPropertyTaxes($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyPhotos">Property Photos</label>
-                        <input type="url" class="form-control" id="propertyPhotos" value={{imgUrl}} (keyup)="setImgUrl($event)">
+                        <input type="url" class="form-control" id="propertyPhotos" value={{imgUrl}}
+                            (keyup)="setImgUrl($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyDescription">Property Description</label>
-                        <textarea class="form-control" id="propertyDescription" value={{propertyDescritpion}} (keyup)="setPropertyDescription($event)"></textarea>
+                        <textarea class="form-control" id="propertyDescription" value={{propertyDescritpion}}
+                            (keyup)="setPropertyDescription($event)"></textarea>
                     </div>
                 </div>
             </form>
@@ -63,21 +70,25 @@
                 <div class="form-row">
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="askingPrice">Asking Price</label>
-                        <input type="number" class="form-control" id="askingPrice" value={{askingPrice}} (keyup)="setAaskingPrice($event)">
+                        <input type="number" class="form-control" id="askingPrice" value={{askingPrice}}
+                            (keyup)="setAaskingPrice($event)">
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="repairCost">Estimated Repair Cost</label>
-                        <input type="number" class="form-control" id="repairCost" value={{repairCost}} (keyup)="setRepairCost($event)">
+                        <input type="number" class="form-control" id="repairCost" value={{repairCost}}
+                            (keyup)="setRepairCost($event)">
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="afterRepairValue">After Repair Value</label>
-                        <input type="number" class="form-control" id="afterRepairValue" value={{afterRepairValue}} (keyup)="setAfterRepairValue($event)">
+                        <input type="number" class="form-control" id="afterRepairValue" value={{afterRepairValue}}
+                            (keyup)="setAfterRepairValue($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="downPayment">Down Payment (%)</label>
-                        <input type="number" class="form-control" id="downPayment" value={{downPayment}} (keyup)="setDownPayment($event)">
+                        <input type="number" class="form-control" id="downPayment" value={{downPayment}}
+                            (keyup)="setDownPayment($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="mortgagePeriod">Mortgage Period (years)</label>
@@ -86,11 +97,13 @@
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="interest">Interest (%)</label>
-                        <input type="number" class="form-control" id="interest" value={{interestRate}} (keyup)="setInterestRate($event)">
+                        <input type="number" class="form-control" id="interest" value={{interestRate}}
+                            (keyup)="setInterestRate($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="closingCost">Closing Cost</label>
-                        <input type="number" class="form-control" id="closingCost" value={{closingCost}} (keyup)="setClosingCost($event)">
+                        <input type="number" class="form-control" id="closingCost" value={{closingCost}}
+                            (keyup)="setClosingCost($event)">
                     </div>
                 </div>
             </form>
@@ -104,18 +117,30 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-sm-3 col-xs-12">
-                        <label for="monthlyRent">Monthly Rent</label>
-                        <input type="number" class="form-control" id="monthlyRent" value={{monthlyRent}} (keyup)="setMonthlyRent($event)">
+                        <label for="monthlyRent">Monthly Rent <i class="glyphicon glyphicon-info-sign"
+                                data-toggle="tooltip" data-placement="right"
+                                title="Use Rentometer to find estimated rent"></i>
+                        </label>
+                        <input type="number" class="form-control" id="monthlyRent" value={{monthlyRent}}
+                            (keyup)="setMonthlyRent($event)">
+                        <div class="text-center">
+                            <a href="https://www.rentometer.com/" target="_blank">
+                                <img src="https://assets.rentometer.com/assets/rentometer_logo_small@2x-6249303dc353efc359b942f9acad103658ea3d2e2ee617a5f3dc691e992b0eda.png"
+                                    alt="..." class="rounded img-fluid" style="width:50%">
+                            </a>
+                        </div>
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="monthlyInsurance">Monthly Insurance</label>
-                        <input type="number" class="form-control" id="monthlyInsurance" value={{monthlyInsurance}} (keyup)="setMonthlyInsurance($event)">
+                        <input type="number" class="form-control" id="monthlyInsurance" value={{monthlyInsurance}}
+                            (keyup)="setMonthlyInsurance($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="maintenance">Maintenance (%)</label>
-                        <input type="number" class="form-control" id="maintenance" value={{maintenance}} (keyup)="setMaintenane($event)">
+                        <input type="number" class="form-control" id="maintenance" value={{maintenance}}
+                            (keyup)="setMaintenane($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="capEx">Capital Exp (%)</label>
@@ -123,11 +148,13 @@
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="vacancyRate">Vacancy Rate (%)</label>
-                        <input type="number" class="form-control" id="vacancyRate" value={{vacancy}} (keyup)="setVacancyRate($event)">
+                        <input type="number" class="form-control" id="vacancyRate" value={{vacancy}}
+                            (keyup)="setVacancyRate($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="management">Management (%)</label>
-                        <input type="number" class="form-control" id="management" value={{management}} (keyup)="setManagement($event)">
+                        <input type="number" class="form-control" id="management" value={{management}}
+                            (keyup)="setManagement($event)">
                     </div>
                 </div>
             </form>
@@ -138,8 +165,8 @@
 <div class="container" #calBtn>
     <div class="row">
         <div class="col-sm-2 col-xs-12 offset-sm-5 text-center">
-            <a routerLink="/tools/rental-property-report"
-                class="btn btn-dark align-items-center btn-block text-light" (click)="calculate()">Calculate</a>
+            <a routerLink="/tools/rental-property-report" class="btn btn-dark align-items-center btn-block text-light"
+                (click)="calculate()">Calculate</a>
         </div>
     </div>
 </div>
